--- a/BlackJack/index.html
+++ b/BlackJack/index.html
@@ -15,6 +15,7 @@
         <div class="align">
             <button id="start-button" onclick="game()">Start Game</button>
             <button id="start-button" onclick="newCard()">New Game</button>
+            <p id="player-el"></p>
         </div>
         <script src="index.js"></script>
     </body>
