adding a local storage and a way to store current tabs

--- a/Extension/index.html
+++ b/Extension/index.html
@@ -9,7 +9,8 @@
     <body>
         <input type="text" id="input-el">
         <button class="input" id="input-btn">Save input</button>
-        <button class="input" id="clear-btn">Clear</button>
+        <button class="input" id="tab-btn">Save tab</button>
+        <button class="delete-btn" id="clear-btn">Clear</button>        
         <ul id="ul-el"></ul>
         <script src="index.js"></script>
     </body>
